<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">CLEAR</string>
    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="multy" translatable="false">*</string>
    <string name="div" translatable="false">÷</string>
    <string name="equals" translatable="false">=</string>
</resources>