<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/back" />

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/settings"
        android:layout_alignParentEnd="true"
        style="@style/CalcTheme"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layoutForButtons"
        android:background="#40ffffff"
        android:gravity="end|bottom"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:theme="@style/CalcTheme"
        tools:text="1244232525" />

    <LinearLayout
        android:id="@+id/layoutForButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:theme="@style/CalcTheme">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear"
                style="@style/ColorForButtonsAct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.11"
                android:text="@string/clear" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_division"
                style="@style/ColorForButtonsAct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:theme="@style/CalcTheme">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                style="@style/ColorForButtonsNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button8"
                style="@style/ColorForButtonsNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button9"
                style="@style/ColorForButtonsNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiplication"
                style="@style/ColorForButtonsAct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multy" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:theme="@style/CalcTheme">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                style="@style/ColorForButtonsNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button5"
                style="@style/ColorForButtonsNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button6"
                style="@style/ColorForButtonsNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/ColorForButtonsAct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:theme="@style/CalcTheme">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                style="@style/ColorForButtonsNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                style="@style/ColorForButtonsNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                style="@style/ColorForButtonsNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/ColorForButtonsAct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:theme="@style/CalcTheme">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button0"
                style="@style/ColorForButtonsNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                style="@style/ColorForButtonsAct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equals" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>